--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   padding: 20px;
+  background-color: rgba(30, 31, 32, 0.945);
+  color: white;
 }
 
 button {
@@ -8,4 +10,14 @@ button {
 
 .completed{
   text-decoration: line-through;
+}
+
+a{
+  color: white;
+  text-decoration: overline;
+  margin: 0px 5px;
+}
+
+.active{
+  color: #8f07ff;
 }
